Unify button/form styling, fix navbar alignment, globalize footer and font

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -32,21 +32,3 @@
   min-width: 250px;
   width: auto;
 }
-
-.btn-outline-secondary {
-  border-radius: 10px;
-}
-
-.btn-outline-secondary:hover {
-  background-color: #CC0000;
-  color: white;
-  transition: 5ms;
-}
-
-.geist-pixel-brand {
-  font-family: "Geist Pixel", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-  font-variation-settings: "ELSH" 0;
-}
